# smith-rust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  PROMPT_TEMPLATES.md  QWEN.md  RUST_GUIDELINES.md
.qwen/: settings.json
scripts/: verify-and-publish.ps1
src/: error.rs  lib.rs  main.rs
src/application/: audit_logger.rs  chat_loop.rs  context_manager.rs  mod.rs  rate_limiter.rs  retry_policy.rs  session_manager.rs  tool_registry.rs
src/domain/: chat_event.rs  embedding.rs  llm.rs  memory.rs  message.rs  mod.rs  observability.rs  security.rs  session.rs  tool.rs
src/infrastructure/: health.rs  mod.rs
src/infrastructure/embedding/: mod.rs  openai.rs
src/infrastructure/llm/: mock.rs  mod.rs  openai.rs
src/infrastructure/memory/: json_store.rs  mod.rs
src/infrastructure/metrics/: mod.rs  prometheus.rs
src/infrastructure/secrets/: env.rs  memory.rs  mod.rs
src/infrastructure/storage/: json.rs  memory.rs  mod.rs  postgres.rs
src/infrastructure/tools/: calculator.rs  datetime.rs  echo.rs  memory_search.rs  mod.rs
src/infrastructure/validation/: mod.rs  sanitizer.rs  validator.rs
src/presentation/: cli.rs  mod.rs
src/presentation/tui/: app.rs  events.rs  mod.rs  ui.rs
src/presentation/tui/components/: chat_history.rs  input_box.rs  metrics_panel.rs  mod.rs  status_bar.rs
tests/: chat_loop_integration.rs
