[package]
name = "smith-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"  # Explicit MSRV
license = "MIT OR Apache-2.0"

[lib]
name = "smith_rust"
path = "src/lib.rs"

[[bin]]
name = "smith"
path = "src/main.rs"

[features]
default = ["runtime-tokio", "mock-llm", "memory", "observability"]
runtime-tokio = ["dep:tokio"]
mock-llm = []  # Enable mock LLM provider for testing
openai = []    # Enable OpenAI-compatible API provider
memory = []    # Enable context & memory management (RAG)
observability = ["dep:metrics", "dep:metrics-exporter-prometheus"]
postgres = ["dep:sqlx"]  # Optional PostgreSQL support

[dependencies]
# Core runtime
tokio = { version = "1.0", features = ["full"], optional = true }

# CLI & UI
clap = { version = "4.0", features = ["derive", "env"] }
ratatui = { version = "0.24", optional = true }

# Async & HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
fastrand = "2.1"
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# Optional dependencies
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono", "json"], optional = true }

[dev-dependencies]
rstest = "0.18"          # Test fixtures
mockall = "0.12"         # Mocking framework
proptest = "1.4"         # Property-based testing
tokio-test = "0.4"       # Async test utilities
wiremock = "0.6"         # HTTP mock server for integration tests
tempfile = "3.10"        # Temporary directories for storage tests

[profile.release]
lto = "thin"             # Faster builds with good optimization
codegen-units = 1        # Better optimization at cost of build time